--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
