--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-runtime": "^7.13.8",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
@@ -27,6 +28,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "react-hook-form": "^6.15.4"
   }
 }
